# img2char

./: .gitignore  CMakeLists.txt  LICENSE  README.md  genChar.cpp  genChar.h  img2char  img2char.cpp  main.cpp
test/: background-600.html  galaxy-inversed.html  galaxy.html  heart-100.html  heart-20.html  heart-50.html  heart-inversed-50.html  heart-inversed.html  heart.html  ice-inversed.html  ice.html  lover-inversed.html  lover.html  women-40.html  women-inversed.html  women.html
